@@ -3,7 +3,7 @@ useDynLib(mgcv, .registration = TRUE, .fixes = "C_")
 export("%.%",anova.gam, bam, bam.update,bandchol, betar,
        blas.thread.test, 
        choldrop,cholup,cox.ph,concurvity, 
-       cSplineDes,dDeta,
+       cSplineDes,dDeta,dmvn,dmvt,
        exclude.too.far,extract.lme.cov, extract.lme.cov2,FFdes,
        formXtViX, full.score, formula.gam,fixDependence,fix.family.link,
        fix.family.var, fix.family.ls, fix.family.qf,fix.family.rd,   
@@ -11,7 +11,7 @@ export("%.%",anova.gam, bam, bam.update,bandchol, betar,
        gam2objective,
        gamm, gam.check, gam.control,gam.fit3,
        gam.fit,gam.fit5.post.proc,
-       gamlss.etamu,gamlss.gH,gammals,
+       gamlss.etamu,gamlss.gH,gammals,gam.mh,
        gam.outer,gam.reparam, gam.vcomp, gamSim , 
        gaulss,gam.side,get.var,gevlss,ginla,
        influence.gam, 
@@ -46,7 +46,7 @@ export("%.%",anova.gam, bam, bam.update,bandchol, betar,
        Predict.matrix.gp.smooth,
        psum.chisq,
        qq.gam,
-       residuals.gam,rig,rTweedie,rmvn, 
+       residuals.gam,rig,rTweedie,rmvn,rmvt,
        Rrank,s,scat,sdiag,"sdiag<-",
        sim2jam,Sl.initial.repara,Sl.inirep,Sl.repara,Sl.setup,
        slanczos,smooth2random,
