@@ -1,12 +1,18 @@
 \name{rmvn}
 \alias{rmvn}
+\alias{dmvn}
+\alias{rmvt}
+\alias{dmvt}
 %- Also NEED an `\alias' for EACH other topic documented here.
-\title{Generate multivariate normal deviates}
-\description{ Generates multivariate normal random deviates.
+\title{Generate from or evaluate multivariate normal or t densities.}
+\description{ Generates multivariate normal or t random deviates, and evaluates the corresponding log densities.
 }
 
 \usage{
 rmvn(n,mu,V)
+rmvt(n,mu,V,df)
+dmvn(x,mu,V,R=NULL)
+dmvt(x,mu,V,df,R=NULL)
 }
 \arguments{
 \item{n}{number of simulated vectors required.}
@@ -15,9 +21,16 @@ rmvn(n,mu,V)
 
 \item{V}{A positive semi definite covariance matrix.}
 
+\item{df}{The degrees of freedom for a t distribution.}
+
+\item{x}{A vector or matrix to evaluate the log density of.}
+
+\item{R}{An optional Cholesky factor of V (not pivoted).}
 }
 
-\value{ An \code{n} row matrix, with each row being a draw from a multivariate normal density with covariance matrix \code{V} and mean vector \code{mu}. Alternatively each row may have a different mean vector if \code{mu} is a vector.
+\value{ An \code{n} row matrix, with each row being a draw from a multivariate normal or t density with covariance matrix \code{V} and mean vector \code{mu}. Alternatively each row may have a different mean vector if \code{mu} is a vector.
+
+For density functions, a vector of log densities.
 
 }
 
@@ -40,7 +53,8 @@ mu <- c(1,3)
 n <- 1000
 z <- rmvn(n,mu,V)
 crossprod(sweep(z,2,colMeans(z)))/n ## observed covariance matrix
-colMeans(z) ## observed mu 
+colMeans(z) ## observed mu
+dmvn(z,mu,V)
 }
 \keyword{models} \keyword{regression}%-- one or more ..
 
